--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "fontawesome": ">= 4.2.0",
     "html5shiv": ">=3.7.0",
     "respond": ">=1.4.2",
-    "datatables": "~1.10.4"
+    "datatables": "~1.10.4",
+    "fullcalendar": "~2.2.3"
   }
 }
